welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ')' expected but 'if' found.
	return (  talking == true if (hour < 7 || hour > 20 ) )
                                  ^parotTrouble:2: error: ';' expected but ')' found.
	return (  talking == true if (hour < 7 || hour > 20 ) )
                                                              ^