welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
	return (  talking == true if (hour < 7 || hour > 20 ) )
	
}
